# mandelbrot-SIMD-Parallel

./: CMakeLists.txt  main.cpp
